# arex

./: .env.example  .gitignore  Makefile  README.md  arex-project-plan.md  docker-compose.override.yml  docker-compose.yml  sentinel-os-project-plan.md
backend/: README.md  alembic.ini  migrations  pyproject.toml  run_profile.py
backend/app/: main.py
backend/app/ai/: graph_builder.py  llm_client.py
backend/app/ai/agents/: implementation_agent.py  regulatory_intelligence_agent.py  remediation_agent.py
backend/app/ai/prompts/: implementation.md  regulatory_intelligence.md  remediation.md
backend/app/ai/tools/: citation_tool.py  kb_search_tool.py
backend/app/api/v1/: router.py
backend/app/core/: audit.py  config.py  dependencies.py  exceptions.py  logging.py  profiler.py  security.py  token_usage.py
backend/app/db/: base.py  session.py
backend/app/models/: approval_record.py  document.py  document_version.py  impact_assessment.py  implementation_task.py  organization.py  regulation_update.py  remediation_draft.py  user.py
backend/app/services/: document_annotations.py  document_modifier.py
backend/app/services/approval_workflow/: workflow_state_machine.py
backend/app/services/change_detector/: diff_engine.py
backend/app/services/compliance_impact/: impact_engine.py
backend/app/workers/: celery_app.py  embedding_job.py  monitoring_job.py
backend/storage/: 2390a6c8-87ab-4105-b76e-78840d852ce3.txt  830ebda6-594a-497e-88c4-8ac55de94d51.txt  9f965823-2e68-404a-baca-6a8a5129b1b0.txt  a3f088ca-fcaf-4967-96e2-e8e2feea7d3b.txt
docs/: CONTRIBUTING.md
(+130 files in other folders)
