[tool.poetry]
name = "sentinel-os-backend"
version = "0.1.0"
description = "FDA 21 CFR Part 11 Regulatory Intelligence MVP Backend"
authors = ["Sentinel OS Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
sqlalchemy = "^2.0.28"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
langgraph = "^0.0.30"
qdrant-client = "^1.8.0"
pymupdf = "^1.23.26"
pdfplumber = "^0.11.0"
httpx = "^0.27.0"
pyjwt = "^2.8.0"
cryptography = "^42.0.5"
python-multipart = "^0.0.18"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
black = "^24.2.0"
isort = "^5.13.2"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
